src/objects/Assignment_Rule_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Assign_To_Name__c</fullName>
        <label>Assign To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_To_Object__c</fullName>
        <label>Assign To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_To_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign To Queue</label>
        <referenceTo>Assignment_Queue__c</referenceTo>
        <relationshipLabel>Assignment Rule Entries</relationshipLabel>
        <relationshipName>Assignment_Rule_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignment_Rule_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_To__c</fullName>
        <label>Assign To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Rule__c</fullName>
        <label>Assignment Rule</label>
        <referenceTo>Assignment_Rule__c</referenceTo>
        <relationshipLabel>Assignment Rule Entries</relationshipLabel>
        <relationshipName>Assignment_Rule_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Criteria_Logic__c</fullName>
        <label>Criteria Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Set__c</fullName>
        <label>Criteria Set</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Assignment Rule Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assignment_Rule__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Rule Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>